# tour

./: .gitignore  .gitmodules  Build.hs  DevServer.hs  Makefile  README  README.md  Tour.hs  Track.hs  alldays.py  blogpost.py  build.nix  build.sh  data.py  default.nix  empty.gpx  frontend.nix  get_geotag.php  gnuplot-template.m4  gpxphotos.awk  layer.m4  make-map.py  makejson.py  makephotos.py  map.m4  processgpx.py  stops.kml  styx.yaml  tour-ghc.nix  tour-ghcjs.nix  tour.cabal  tour.nix  tour2012.csv  trackcolour.py  tracktitle.py  upload.sh
GPS_DATA/: README
common/: App.hs  AppTypes.hs  Fetch.hs  TourJson.hs  Types.hs  Util.hs
data/: tour2008.yaml  tour2010.yaml  tour2011.yaml  tour2011a.yaml  tour2012.yaml  tour2015.yaml  tour2016.yaml  tour2017.yaml
frontend/: ElevChart.hs  Leaflet.hs  Main.hs  TourMap.hs  bower-packages.nix  bower.json  index-prod.html  index.html  package.json  tour.sass
frontend-prototype/: .gitignore  README.md  index.html
frontend-prototype/config/: index.js
frontend-prototype/src/: models.js
frontend-prototype/src/components/: TourList.vue
frontend-prototype/src/filters/: index.js
frontend/config/: index.js
frontend/src/: App.vue  models.js  plugin.js  tracks.js
frontend/src/components/: ElevChart.vue  MapAll.vue  MapTour.vue  TourDay.vue  TourList.vue  TourMain.vue  TourMap.vue  TourPage.vue  TourPageIndex.vue  map_components.js
frontend/src/filters/: formatDate.js  formatDayTitle.js  index.js
frontend/src/router/: index.js
frontend/src/styles/: settings.scss
frontend/static/: tour.sass
gps/: Makefile  README  tracks.js
handmade/: README
movies/: README
old/: alldays.py  blog-post.pl  data.py  date2path.py  gpxphotos.awk  jsbounds.xsl  listalbum.php  makephotos.py  processgpx.py  trackcolour.py  tracktitle.py
old/web/: .htaccess  index2.html
photos/: README
server/: ServerMain.hs
trackdata/: README
tracks/: README
web/: index.html  tourmap.js
